--- a/style.css
+++ b/style.css
@@ -195,12 +195,100 @@ header nav div {
     color: #fff;
 }
 
+.username {
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+    background-color: rgb(21, 108, 223);
+    padding: 10px 20px;
+    width: 20%;
+    margin-top: 10px;
+    align-self: center;
+    border-radius: 30px;
+}
+
+.profile {
+    margin: 0 auto;
+    width: 500px;
+}
+
 .about, 
 .info {
-    margin: 0 auto;
     margin-top: 20px;
     width: 400px;
     background-color: #161616;
     padding: 40px;
     border-radius: 10px;
+}
+
+.about {
+    margin-bottom: 20px;
+}
+
+.settings {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(21, 108, 223);
+    padding: 10px 20px;
+    font-weight: bold;
+    border-radius: 20px;
+}
+
+.settings:hover {
+    color: rgb(21, 108, 223);
+    background-color: #fff;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(21, 108, 223);
+}
+
+.profile-settings {
+    margin-top: 10px;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #141414;
+    border-radius: 5px;
+}
+
+.profile-settings h3 {
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.profile-settings p {
+    font-size: 14px;
+}
+
+.profile-textarea {
+    width: 100%;
+    height: 150px;
+    resize: vertical;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.profile-input {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.profile-button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(21, 108, 223);
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.profile-button:hover {
+    background-color: rgb(18, 82, 167);
 }
